<resources>

    <string name="app_name">Apna App</string>
    <string name="hint_email">Enter your email address</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_mobile">Enter your mobile number with country code</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_city">Enter your city</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="navigation">Navigation Drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>
